# molar

./: .gitignore  CMakeLists.txt
molar/: molang_ast_generator.cpp  molang_ast_generator.hpp  molang_error.hpp  molang_token.cpp  molang_token.hpp  molang_tokenizer.cpp  molang_tokenizer.hpp
molar/ast/: access_expression.cpp  access_expression.hpp  ast_replacer.cpp  ast_replacer.hpp  ast_visitor.cpp  ast_visitor.hpp  controll_flow.cpp  controll_flow.hpp  expression.cpp  expression.hpp  keyword.cpp  keyword.hpp  literal.cpp  literal.hpp  variable.cpp  variable.hpp
molar/ast/internal/: variable_manager.hpp
molar/execution/preprocessor/: ast_reallocator.cpp  ast_reallocator.hpp  ast_rebuilder.cpp  ast_rebuilder.hpp  molang_preprocessor.cpp  molang_preprocessor.hpp  processed_ast_visitor.cpp  processed_ast_visitor.hpp
molar/execution/preprocessor/execution_nodes/: pre_allocated.cpp  pre_allocated.hpp  pre_allocated_variable.cpp  pre_allocated_variable.hpp
molar/internal/: checked_down_cast.hpp  source_buffer.cpp  source_buffer.hpp
molar_test/: main.cpp
